# smartbeans-backend

./: .env-default  .env.sample  .gitignore  API_doc.md  Cargo.toml  LICENSE  README.md  Rocket.toml  SettingsDefault.toml  build.rs
.github/workflows/: ci.yml  rust.yml
data/: achievements.json  assets.json  names.txt  task_stats.json
migrations/2020-11-13-220453_create_sessions/: up.sql
migrations/2020-12-06-220035_add_smartape_token_column/: down.sql  up.sql
migrations/2020-12-26-124303_add_achievements_table/: down.sql  up.sql
migrations/2020-12-27-201858_create_table_characters/: up.sql
migrations/2020-12-28-000049_create_table_charnames/: down.sql  up.sql
migrations/2021-01-17-214011_create_system_messages_table/: down.sql  up.sql
migrations/2021-01-25-191943_create_users_table/: up.sql
migrations/2021-02-19-140756_create_table_error_reports/: down.sql  up.sql
migrations/2021-02-22-191638_insert_column_score_in_users/: down.sql  up.sql
migrations/2021-02-23-134338_table_users_add_column_char_changed/: down.sql  up.sql
migrations/2021-02-23-224541_create_table_route_log/: down.sql  up.sql
migrations/2021-02-24-220154_table_users_add_userid/: down.sql  up.sql
migrations/2021-03-02-143159_add_table_error_messages/: down.sql  up.sql
migrations/2021-03-22-165545_table_users_add_column_survey/: down.sql  up.sql
migrations/2021-03-24-104952_add_survey_table/: down.sql  up.sql
migrations/2021-09-13-202759_add_table_users/: up.sql
migrations/2021-09-13-205955_add_table_sessions/: up.sql
migrations/2021-09-13-210413_add_table_courses/: down.sql  up.sql
migrations/2021-09-13-210630_add_table_courseMapping/: down.sql  up.sql
migrations/2021-09-16-203244_add_table_tasks/: up.sql
migrations/2021-09-16-205059_add_table_courseTask/: down.sql  up.sql
migrations/2021-09-21-184640_table_courses_add_column_config/: down.sql  up.sql
migrations/2021-09-21-205301_add_table_submissions/: down.sql  up.sql
src/: achievements.rs  bot.rs  database.rs  guards.rs  init_user.rs  level.rs  lib.rs  main.rs  models.rs  schema.rs  smartape.rs  static_data.rs  system_messages.rs  tools.rs
src/auth/: api_token.rs  guards.rs  lti.rs  (+2 more)
templates/: error.html.tera  lti_disabled.html.tera  lti_invalid_request.html.tera
(+12 files in other folders)
