[package]
name = "smartbeans-backend"
version = "1.4.0"
authors = ["Niklas Birth <birth@posteo.de>"]
edition = "2018"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1.0.118"
serde_json = "1.0.59"
dotenv = "0.15.0"
rand = "0.7.3"
diesel = { version = "1.4.5", features = ["mysql"] }
diesel_migrations = "1.4.0"
rocket_cors = "0.5.2"
colored = "2.0.0"
serde_urlencoded = "0.7.0"
hmac = "0.10.1"
base64 = "0.13.0"
crypto-hashes = { version = "0.9.0", features = ["include_weak"] }
percent-encoding = "2.1.0"
reqwest = { version = "0.10.9", features = ["blocking", "json", "cookies"] }
rocket-slog = "0.4.0"
sloggers = "1.0.1"
lazy_static = "1.4.0"
cached = "0.23.0"
telegram-bot = "0.8.0"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
futures = "0.3"
regex = "1.4.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]