[package]
name = "smartbeans-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
lazy_static = "1.4.0"
config = "0.11.0"
serde_urlencoded = "0.7.0"
hmac = "0.10.1"
crypto-hashes = "0.9.0"
percent-encoding = "2.1.0"
base64 = "0.13.0"
diesel = { version = "1.4.7", features = ["mysql"] }
diesel_migrations = "1.4.0"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.67"
rust-argon2 = "0.8.3"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }